# auto_project

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: agent.yml
bot/: Dockerfile  README.md  app.py
examples/: requirements.txt.example  workflow.yml.example
src/auto_project/: __main__.py  llm.py  main.py  notify.py  state.py
src/auto_project/agents/: hello.py
src/auto_project/youtube/: __init__.py  categories.py
state/hello/: last.json
tests/: test_bot_url_route.py  test_llm.py  test_main.py  test_notify.py  test_state.py  test_youtube_categories.py
